# libqrtr-glib

./: .gitignore  .gitlab-ci.yml  AUTHORS  Makefile.am  NEWS  README  README.md  RELEASING  autogen.sh  configure.ac  meson.build  meson_options.txt
data/pkg-config/: Makefile.am  qrtr-glib.pc.in
docs/reference/libqrtr-glib/: Makefile.am  libqrtr-glib-docs.xml  libqrtr-glib.toml.in  meson.build
src/: Makefile.am
src/libqrtr-glib/: Makefile.am  libqrtr-glib.h  meson.build  qrtr-bus.c  qrtr-bus.h  qrtr-client.c  qrtr-client.h  qrtr-node.c  qrtr-node.h  qrtr-types.h  qrtr-utils.c  qrtr-utils.h  qrtr-version.h.in
